--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -14,8 +14,8 @@ $color-naranja-focus: rgb(252, 104, 35, 0.205);
 $color-rojo-focus: rgba(226, 27, 27, 0.568);
 $color-negro: rgb(32, 37, 46);
 $color-texto: rgb(142, 146, 150);
-$color-dark-theme: rgb(199, 181, 200);
-$color-light-theme: rgb(249, 228, 253);
+$color-dark-theme: #c7b5c8;
+$color-light-theme: #f9e4fd;
 $carousel-transition-duration: 0.2s;
 $font-family: "Montserrat", sans-serif;
 
